gl31-master/src/test/deca/lex/invalid/complet/class_bad_multistring2.deca
// Description:
//    tests de programme incorrect lexicalement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    int methodeTest(int param1, float param2) asm (multi line string");
}
